--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,6 @@
     <string name="action_tutorial">Show Tutorial</string>
     <string name="action_delete">Delete all parameters</string>
 
-    <string name="delete_dialog">Do you really wish to delete all parameters?</string>
-    <string name="delete_dialog_success">All parameters deleted.</string>
-
     <!--###METADATA_LIST###-->
     <string name="undo">Undo</string>
     <string name="item_deleted">deleted.</string>
@@ -114,6 +111,12 @@
     <string name="help_permissions_description">Privacy Friendly Password Generator does not require any permission.</string>
 
     <!-- ###SETTINGS### -->
+    <string name="title_reset_all">Reset</string>
+    <string name="title_reset_list">Delete complete list</string>
+
+    <string name="delete_dialog">Do you really wish to delete all parameter sets?</string>
+    <string name="delete_dialog_success">Complete list deleted.</string>
+
     <string name="title_activity_settings">Settings</string>
     <string name="title_password_settings">Password settings</string>
     <string name="title_bind_password">Bind to device</string>
