--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -156,4 +156,8 @@ Die Satze werden aus der Parametern gewonnen</string>
     <!-- ##IMAGE_DESCRIPTIONS-->
     <string name="app_logo">App Logo</string>
 
+    <!-- ##SEARCH-->
+    <string name="search_parameter_label">Suche</string>
+    <string name="search_parameter_hint">Domain</string>
+
 </resources>
