--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -8,10 +8,6 @@
     <string name="action_settings">Einstellungen</string>
     <string name="action_main">Hauptmenü</string>
     <string name="action_tutorial">Tutorial anzeigen</string>
-    <string name="action_delete">Alle Parameter löschen</string>
-
-    <string name="delete_dialog">Möchten Sie wirklich alle Parameter löschen?</string>
-    <string name="delete_dialog_success">Alle Parameter gelöscht.</string>
 
     <!--###METADATA_LIST###-->
     <string name="undo">Rückgängig</string>
@@ -102,9 +98,13 @@ Die Satze werden aus der Parametern gewonnen</string>
 
     <string name="help_permissions_heading">Welche Berechtigungen verwendet Privacy Friendly Passwort Generator?</string>
     <string name="help_permissions_description">Privacy Friendly Passwort Generator verwendet keine Berechtigungen.</string>
-
-
+    
     <!-- ###SETTINGS### -->
+    <string name="title_reset_all">Zurücksetzen</string>
+    <string name="title_reset_list">Gesamte Liste löschen</string>
+    <string name="delete_dialog">Möchten Sie wirklich die Liste aller Parameter löschen?</string>
+    <string name="delete_dialog_success">Liste gelöscht.</string>
+
     <string name="title_activity_settings">Einstellungen</string>
     <string name="title_password_settings">Passworteinstellungen</string>
     <string name="title_bind_password">An Gerät binden</string>
