--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,17 +108,15 @@
     <string name="help_permissions_description">Privacy Friendly Password Generator does not require any permission.</string>
 
     <!-- ###SETTINGS### -->
-    <string name="title_reset_all">Reset</string>
-    <string name="title_reset_list">Delete complete list</string>
+    <string name="title_reset_list">Delete all parameter sets</string>
     <string name="delete_dialog">Do you really wish to delete all parameter sets?</string>
-    <string name="delete_dialog_success">Complete list deleted.</string>
+    <string name="delete_dialog_success">All parameter sets deleted.</string>
 
     <string name="title_activity_settings">Settings</string>
-    <string name="title_password_settings">Password settings</string>
-    <string name="title_bind_password">Bind to device</string>
-    <string name="summary_bind_password">Create unique passwords per device.</string>
-    <string name="title_clipboard">Copy to clipboard</string>
-    <string name="summary_clipboard">Passwords will automatically copied after generation.</string>
+    <string name="title_bind_password">Bind passwords to device</string>
+    <string name="summary_bind_password">Creates unique passwords per device.</string>
+    <string name="title_clipboard">Copy passwords to clipboard</string>
+    <string name="summary_clipboard">Passwords will automatically copied to the clipboard after generation.</string>
 
     <string name="title_expert_mode">Expert mode</string>
     <string name="expert_mode_summary">The hash algorithms and number of iterations have a high influence on the time needed for generating the password.</string>
@@ -181,6 +179,5 @@
 
     <!-- ##SEARCH-->
     <string name="search_parameter_label">Search</string>
-    <string name="search_parameter_hint">Domain</string>
 
 </resources>
