--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -106,9 +106,9 @@ Die Satze werden aus der Parametern gewonnen</string>
 
     <string name="title_activity_settings">Einstellungen</string>
     <string name="title_bind_password">Passworte an Gerät binden</string>
-    <string name="summary_bind_password">Generieren eindeutiger Passworte abhängig vom Gerät.</string>
+    <string name="summary_bind_password">Einschalten hat eine Auswikrung auf alle Passworte.</string>
     <string name="title_clipboard">In Zwischenablage kopieren</string>
-    <string name="summary_clipboard">Automatisches Kopieren der Passworte in die Zwischenablage nach dem Generieren.</string>
+    <string name="summary_clipboard">Alle anderen Apps können Ihre Passworte in der Zwischenablage einsehen.</string>
 
     <string name="title_expert_mode">Expertenmodus</string>
     <string name="expert_mode_summary">Hash-Algorithmus und Hash-Iterationen haben einen großen Einfluss auf die Dauer der Generierung.</string>
