--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,17 +113,17 @@
     <string name="delete_dialog_success">All parameter sets deleted.</string>
 
     <string name="title_activity_settings">Settings</string>
-    <string name="title_bind_password">Bind passwords to device</string>
-    <string name="summary_bind_password">Creates unique passwords per device.</string>
+    <string name="title_bind_password">Unique passwords per device</string>
+    <string name="summary_bind_password">Activation will effect all passwords.</string>
     <string name="title_clipboard">Copy passwords to clipboard</string>
-    <string name="summary_clipboard">Passwords will automatically copied to the clipboard after generation.</string>
+    <string name="summary_clipboard">All other apps will have access to your password on the clipboard.</string>
 
     <string name="title_expert_mode">Expert mode</string>
-    <string name="expert_mode_summary">The hash algorithms and number of iterations have a high influence on the time needed for generating the password.</string>
+    <string name="expert_mode_summary">Hash algorithm and number of iterations have a high influence on the time needed for generating the password.</string>
     <string name="title_hash_iterations">Number of hash iterations</string>
 
     <string name="title_benchmark">Benchmark: generation</string>
-    <string name="summary_benchmark">Test the duration of generating the password on the given algorithm and iteration.</string>
+    <string name="summary_benchmark">Test the duration of generating based on the given algorithm and iteration.</string>
 
     <string name="title_hash_algorithms">Hash algorithm</string>
     <string-array name="pref_hash_algorithms" translatable="false">
