--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -12,14 +12,14 @@
     <!--###METADATA_LIST###-->
     <string name="undo">Rückgängig</string>
     <string name="item_deleted">gelöscht.</string>
-    <string name="initial_alert">PARAMETER HINZUFÜGEN</string>
+    <string name="initial_alert">KONTO HINZUFÜGEN</string>
 
     <!--###ADD_METADATA###-->
     <string name="add_metadata_heading">Neues Konto hinzufügen</string>
     <string name="domain">Kontoname:</string>
     <string name="username">Benutzername:</string>
     <string name="username_optional">Benutzername (optional):</string>
-    <string name="characterset">Zeichensatz:</string>
+    <string name="characterset_add">Das Passwort wird bestehen aus:</string>
     <string name="special_characters">Sonderzeichen (+!#)</string>
     <string name="letters_upper">Groß (ABC)</string>
     <string name="letters_lower">Klein (abc)</string>
@@ -28,17 +28,25 @@
     <string name="iteration">Passwortzähler: </string>
     <string name="add_domain_message">Bitte geben Sie einen Kontonamen an.</string>
     <string name="add_character_message">Bitte suchen Sie mindestens einen Zeichensatz aus.</string>
-    <string name="hint_iteration">(1 falls leer)</string>
+
+    <string name="change_version_closed">▶ Version ändern</string>
+    <string name="change_version_opened">▼ Version ändern</string>
+    <string name="current_version">Aktuelle Passwort-Version: </string>
 
     <string name="add">Hinzufügen</string>
     <string name="cancel">Abbrechen</string>
 
     <!--###UPDATE_METADATA###-->
+    <string name="characterset">Zeichensatz:</string>
     <string name="old_password">Altes Passwort:</string>
     <string name="new_password">Neues Passwort:</string>
     <string name="master_password_description">Das Master-Passwort wird zum Generien benötigt.</string>
     <string name="next">Weiter</string>
     <string name="save">Speichern</string>
+
+    <string name="old_version">Die alte Passwort-Version ist %s.</string>
+    <string name="new_version">Die neue ist </string>
+
     <string name="added_message">Parameter updated.</string>
     <string name="canceled_message">Update abgebrochen.</string>
 
@@ -47,7 +55,11 @@
 
     <string name="copy_clipboar_old">Altes Passwort kopiert.</string>
     <string name="copy_clipboar_new">Neues Passwort kopiert.</string>
-    <string name="counter_update">Der Passwortzähler wird automatisch um 1 erhöht.</string>
+
+    <!--####VERSION_INFO####-->
+    <string name="dialog_version_title">Was ist die Passwort-Version?</string>
+    <string name="dialog_version">Die Version ist eine Zahl, die anzeigt wie viele verschiedene Passworte bereits für einen Account generiert wurden. Außerdem sorgt sie im Falle eines Updates dafür, dass
+    ein anderes Passwort generiert wird, auch wenn weder das Master-Passwort, noch andere Accounteigenschaften verändert werden.</string>
 
     <!--###GENERATOR###-->
     <string name="generate_heading">Passwort generieren</string>
@@ -71,16 +83,20 @@
     <!--###HELP###-->
     <string name="help">Hilfe</string>
     <string name="help_overview">Was ist Privacy Friendly Passwort Generator?</string>
-    <string name="help_overview_answer">Privacy Friendly Passwort Generator generiert Passworte eindeutig aus vorher festgelegten Parametern.</string>
+    <string name="help_overview_answer">Privacy Friendly Passwort Generator generiert Passworte eindeutig aus vorher festgelegten Daten. Die generierten Passworte können anschließend auf der
+     entsprechenden Website oder ähnlichem eingetragen werden.</string>
 
-    <string name="help_parameter_set_heading">Was ist ein Parameter?</string>
-    <string name="help_parameter_set_answer">Parameter beschreiben Eigenschaften des Passworts.</string>
-    <string name="help_which_parameters_heading">Welche Parameter können gewählt werden?</string>
+    <string name="help_generation">Wie generiere ich ein Passwort?</string>
+    <string name="help_generation_answer">Um ein Passwort zu generieren wähle zunächst einen Account aus der Liste aus. Gebe dann ein von dir ausgedachtes Master-Passwort ein und rücke auf "Generieren".</string>
+
+    <string name="help_parameter_set_heading">Was ist ein Konto?</string>
+    <string name="help_parameter_set_answer">Ein Konto enthält alle Eigenschaften eines Passworts.</string>
+    <string name="help_which_parameters_heading">Welche Eigenschaften können gewählt werden?</string>
     <string name="help_which_parameters_domain">Der Kontoname ist eine Referenz zur Webseite oder sonstigem, wofür das Passwort verwendet wird.</string>
     <string name="help_which_parameters_username">Der optionale Benutzername kann verwendet werden um verschiedene Nutzer bei gleichem Kontonamen zu unterscheiden.</string>
     <string name="help_which_parameters_characterset">Der Zeichensatz beschreibt welche Arten von Zeichen das Passwort haben soll. Manche Webseiten empfehlen bestimmte Kombinationen von Zeichen.</string>
     <string name="help_which_parameters_length">Die Länge des Passworts kann gewählt werden.</string>
-    <string name="help_which_parameters_password_counter">Der Passwortzähler wird verwendet, um im Falle einer Änderung verschiedene Passworte mit selben Parametern zu generieren. Der Standardwert ist 1. Der Passwortzähler wird bei jedem Update um 1 erhöht.</string>
+    <string name="help_which_parameters_password_counter">Die Version wird verwendet, um im Falle einer Änderung verschiedene Passworte mit selben Parametern zu generieren. Der Standardwert ist 1. Der Passwortzähler wird bei jedem Update um 1 erhöht.</string>
 
     <string name="help_manage_add_heading">Wie kann ich Parameter hinzufügen?</string>
     <string name="help_manage_add_description">Hüge neue Parameter über den Plus-Knopf hinzu.</string>
@@ -105,10 +121,10 @@ Die Satze werden aus der Parametern gewonnen</string>
     <string name="delete_dialog_success">Alle Parameter gelöscht.</string>
 
     <string name="title_activity_settings">Einstellungen</string>
-    <string name="title_bind_password">Passworte an Gerät binden</string>
-    <string name="summary_bind_password">Einschalten hat eine Auswikrung auf alle Passworte.</string>
+    <string name="title_bind_password">Alle Passworte an Gerät koppeln</string>
+    <string name="summary_bind_password">Erzeugt eindeutige Passworte abhängig vom Gerät. Andere Geräte können nicht diesselben Passworte bei Eingabe derselben Daten und demselben Master-Passwort erzeugen.</string>
     <string name="title_clipboard">In Zwischenablage kopieren</string>
-    <string name="summary_clipboard">Alle anderen Apps können Ihre Passworte in der Zwischenablage einsehen.</string>
+    <string name="summary_clipboard">Achtung: Alle anderen Apps können Ihre Passworte in der Zwischenablage einsehen.</string>
 
     <string name="title_expert_mode">Expertenmodus</string>
     <string name="expert_mode_summary">Hash-Algorithmus und Hash-Iterationen haben einen großen Einfluss auf die Dauer der Generierung.</string>
