--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -179,4 +179,12 @@ Die Satze werden aus der Parametern gewonnen</string>
     <!-- ##SEARCH-->
     <string name="search_parameter_label">Suche</string>
 
+    <!-- ##SAMPLE DATA-->
+    <string name="sample_domain1">beispiel.email.de</string>
+    <string name="sample_username1">max.mustermann@email.de</string>
+    <string name="sample_domain2">beispiel-domain.de</string>
+    <string name="sample_username2">Martina Musterfrau</string>
+    <string name="sample_domain3"> Beispiel PIN</string>
+    <string name="sample_username3"></string>
+
 </resources>
