--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,4 +209,12 @@
     <!-- ##SEARCH-->
     <string name="search_parameter_label">Search</string>
 
+    <!-- ##SAMPLE DATA-->
+    <string name="sample_domain1">sample.email.com</string>
+    <string name="sample_username1">sample.name@email.com</string>
+    <string name="sample_domain2">sample-domain.de</string>
+    <string name="sample_username2">Sample Username</string>
+    <string name="sample_domain3"> Sample PIN</string>
+    <string name="sample_username3"></string>
+
 </resources>
