--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="generate">Generate</string>
     <string name="master_password_heading">Master password:</string>
     <string name="enter_masterpassword">Please, enter a master password.</string>
+    <string name="masterpassword_length">Please, enter at least 8 characters.</string>
     <string name="password">Your password:</string>
     <string name="init_password"></string>
     <string name="done">Done</string>
